crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a b:89  ca:23A,64b d:34c'::tsvector @@ 'd:AC & ca:CB' as \"true\";"
---
SelectStmt@0..72
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..71
    AExpr@7..61
      TypeCast@7..43
        AConst@7..33
          Sconst@7..33 "'a b:89  ca:23A,64b d ..."
        Typecast@33..35 "::"
        TypeName@35..43
          Ident@35..43 "tsvector"
      Whitespace@43..44 " "
      Op@44..46 "@@"
      Whitespace@46..47 " "
      AConst@47..61
        Sconst@47..61 "'d:AC & ca:CB'"
    Whitespace@61..62 " "
    As@62..64 "as"
    Whitespace@64..65 " "
    Ident@65..71 "\"true\""
  Ascii59@71..72 ";"

