crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@89.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a b:89  ca:23A,64c cb:80b d:34c'::tsvector @@ 'd:AC & c:*C' as \"true\";"
---
SelectStmt@0..78
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..77
    AExpr@7..67
      TypeCast@7..50
        AConst@7..40
          Sconst@7..40 "'a b:89  ca:23A,64c c ..."
        Typecast@40..42 "::"
        TypeName@42..50
          Ident@42..50 "tsvector"
      Whitespace@50..51 " "
      Op@51..53 "@@"
      Whitespace@53..54 " "
      AConst@54..67
        Sconst@54..67 "'d:AC & c:*C'"
    Whitespace@67..68 " "
    As@68..70 "as"
    Whitespace@70..71 " "
    Ident@71..77 "\"true\""
  Ascii59@77..78 ";"

