crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@92.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'wa:1D wb:2A'::tsvector @@ 'w:*D <-> w:*A'::tsquery as \"true\";"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..68
    AExpr@7..58
      TypeCast@7..30
        AConst@7..20
          Sconst@7..20 "'wa:1D wb:2A'"
        Typecast@20..22 "::"
        TypeName@22..30
          Ident@22..30 "tsvector"
      Whitespace@30..31 " "
      Op@31..33 "@@"
      Whitespace@33..34 " "
      TypeCast@34..58
        AConst@34..49
          Sconst@34..49 "'w:*D <-> w:*A'"
        Typecast@49..51 "::"
        TypeName@51..58
          Ident@51..58 "tsquery"
    Whitespace@58..59 " "
    As@59..61 "as"
    Whitespace@61..62 " "
    Ident@62..68 "\"true\""
  Ascii59@68..69 ";"

