crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@93.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'wa:1A wb:2D'::tsvector @@ 'w:*D <-> w:*A'::tsquery as \"false\";"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..69
    AExpr@7..58
      TypeCast@7..30
        AConst@7..20
          Sconst@7..20 "'wa:1A wb:2D'"
        Typecast@20..22 "::"
        TypeName@22..30
          Ident@22..30 "tsvector"
      Whitespace@30..31 " "
      Op@31..33 "@@"
      Whitespace@33..34 " "
      TypeCast@34..58
        AConst@34..49
          Sconst@34..49 "'w:*D <-> w:*A'"
        Typecast@49..51 "::"
        TypeName@51..58
          Ident@51..58 "tsquery"
    Whitespace@58..59 " "
    As@59..61 "as"
    Whitespace@61..62 " "
    Ident@62..69 "\"false\""
  Ascii59@69..70 ";"

