crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@95.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'wa:1A'::tsvector @@ 'w:*D'::tsquery as \"false\";"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..54
    AExpr@7..43
      TypeCast@7..24
        AConst@7..14
          Sconst@7..14 "'wa:1A'"
        Typecast@14..16 "::"
        TypeName@16..24
          Ident@16..24 "tsvector"
      Whitespace@24..25 " "
      Op@25..27 "@@"
      Whitespace@27..28 " "
      TypeCast@28..43
        AConst@28..34
          Sconst@28..34 "'w:*D'"
        Typecast@34..36 "::"
        TypeName@36..43
          Ident@36..43 "tsquery"
    Whitespace@43..44 " "
    As@44..46 "as"
    Whitespace@46..47 " "
    Ident@47..54 "\"false\""
  Ascii59@54..55 ";"

